# ft_malloc

./: CMakeLists.txt  LICENSE  README.md  bzero.c  calloc.c  check_size.c  free.c  is_alloc.c  makefile  malloc.c  memcpy.c  print.c  realloc.c  reallocf.c  run.sh  show_alloc_mem.c  show_hex_mem.c
header/: malloc.h
test/: main.c  test_error_basic.c  test_free_basic.c  test_malloc_base.c  test_realloc_basic.c
